<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/margen2"
    android:paddingLeft="@dimen/margen2"
    android:paddingRight="@dimen/margen2"
    android:paddingTop="@dimen/margen2" >

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="fill"
        android:layout_weight="0.10"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/nuevo_plc"
        android:textOff="@string/editar_plc"
        android:textOn="@string/nuevo_plc" />

    <TextView
        android:id="@+id/tituloAlarmas"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:text="@string/TplcNombre"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/eplcnombre"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:text="@string/TplcRefresco"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/eplcrefresco"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:text="@string/TplcIp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/eplcip"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:ems="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10" >

        <TextView
            android:id="@+id/textfecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Paneles"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_weight="0.10"
        android:drawSelectorOnTop="true"
        android:choiceMode="singleChoice"
        android:focusable="true" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10" >

        <ImageButton
            android:id="@+id/crear_panel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/ic_input_add" />

        <ImageButton
            android:id="@+id/edit_panel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_edit" />

        <ImageButton
            android:id="@+id/borrar_panel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/ic_delete" />
    </LinearLayout>

</LinearLayout>